# my-ai

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  LICENSE  README.md  commitlint.config.js  cspell.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/scripts/: render-release-notes.sh  version-bump-check.sh
.github/workflows/: build-windows.yml  build.yml  compat-matrix-check.yml  i18n-check.yml  release.yml  version-bump-check.yml
.husky/: commit-msg  pre-commit
client/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/compat/: check.ts  handshake.test.ts  handshake.ts
client/src/components/: AgentCard.tsx  AgentFormDialog.tsx  ChatDialog.tsx  ConfirmDialog.tsx  EmptyOffice.tsx  MismatchBanner.test.tsx  MismatchBanner.tsx  Office.tsx  PairBanner.test.tsx  PairBanner.tsx  PairDialog.test.tsx  PairDialog.tsx  Settings.test.tsx  Settings.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
client/src/i18n/: index.test.ts  index.ts  locales.test.ts  switch.test.tsx  switch.tsx
client/src/lib/: agents.ts  api.test.ts  api.ts  messages.ts  secure-store.test.ts  secure-store.ts  sessions.ts  types.ts  use-dialog-animation.ts  uuid.test.ts  uuid.ts
client/src/test/: setup.ts
client/test/: App.test.tsx  setup.ts
client/test/_helpers/: version-fixture.ts
client/test/compat/: handshake.test.ts
client/test/components/: AgentCard.test.tsx  AgentFormDialog.test.tsx  ChatDialog.test.tsx  ConfirmDialog.test.tsx  EmptyOffice.test.tsx  MismatchBanner.test.tsx  Office.test.tsx  PairBanner.test.tsx  (+3 more)
core/: .env.example  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
core/src/: config.ts  errors.ts  index.ts  logger.ts  response.ts  server.ts
core/test/: errors.test.ts
gateway/: .env.example  .gitignore  README.md  package.json  vitest.config.ts
gateway/src/: cli.ts  config.test.ts  config.ts  db.test.ts  db.ts  index.ts  logger.ts  response.test.ts  response.ts  server.ts
gateway/test/: config.test.ts  db.test.ts  response.test.ts
scripts/: check-compat-matrix.mjs  check-compat-matrix.test.mjs  check-i18n.mjs  check-i18n.test.mjs  integration-test.sh  setup.mjs  sync-compat.mjs  sync-compat.test.mjs  sync-versions.mjs  sync-versions.test.mjs
versions/: compat-matrix.json  v1.md  v2.md  v3.md  v4.md  v5.md  v6.1.md  v6.2.md  v6.3.md  v6.md
(+113 files in other folders)
